crates/solidity-v2/testing/snapshots/cst_output/UsingDeconstructionSymbol/single_id_as_operator/generated/0.8.13-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.19'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/UsingDeconstructionSymbol/single_id_as_operator/input.sol:3:5]
   │
 3 │ foo as /
   │     ──┬─  
   │       ╰─── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            UsingDirective(
                UsingDirectiveStruct {
                    using_keyword: UsingKeyword {
                        range: 0..5,
                    },
                    clause: UsingDeconstruction(
                        UsingDeconstructionStruct {
                            open_brace: OpenBrace {
                                range: 6..7,
                            },
                            symbols: UsingDeconstructionSymbols {
                                elements: [
                                    UsingDeconstructionSymbolStruct {
                                        name: IdentifierPath {
                                            elements: [
                                                Identifier(
                                                    Identifier {
                                                        range: 130..133,
                                                    },
                                                ),
                                            ],
                                        },
                                        alias: Some(
                                            UsingAliasStruct {
                                                as_keyword: AsKeyword {
                                                    range: 134..136,
                                                },
                                                operator: Slash(
                                                    Slash {
                                                        range: 137..138,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                            close_brace: CloseBrace {
                                range: 146..147,
                            },
                        },
                    ),
                    for_keyword: ForKeyword {
                        range: 148..151,
                    },
                    target: TypeName(
                        ElementaryType(
                            UintKeyword(
                                UintKeyword {
                                    range: 152..156,
                                },
                            ),
                        ),
                    ),
                    global_keyword: None,
                    semicolon: Semicolon {
                        range: 156..157,
                    },
                },
            ),
        ],
    },
}
